# FsLibc

./: CMakeLists.txt
libc/: CMakeLists.txt
libc/include/fslc/: fslc_string.h
libc/src/: fslc_strcat.c  fslc_strrstr.c
tests/: CMakeLists.txt
